@@ -1,4 +1,5 @@
-DIST fldigi-2.10.3.tar.gz 640426 RMD160 1e78446b1b88b71e0bc8da88bfef69ae608e88a5 SHA1 43bbfd184b673b80e1f92a3bbc6c4707600971c0 SHA256 601a64540e3477122672f2ff7d2e094ab3d79ebcc24fcf1edb7b660fb8d86f77
-EBUILD fldigi-2.10.3.ebuild 1004 RMD160 91f3e53a208628c19df556d8f6a5cd62d89a39b2 SHA1 6bf8522864c4f5ee1137b2ae3a9b918235ddba9e SHA256 e006506d8cb4b7d29b70201e208652e40ad35fd6c4a73dd55d47378404134df6
-MISC ChangeLog 423 RMD160 4dff8973dbff50b21dacd4b59ac6f8f7f9503bc9 SHA1 af8707b5df36563f3fcc8d68926059cc2b3cbcd7 SHA256 2e7b944f00e0875352e76f5972cf63526b6c1f5900478d8fac08dc15265392bb
-MISC metadata.xml 443 RMD160 3a470a5b015a2b76f3f38f78f1d8cddc9014cf7f SHA1 4f13ebf5bf417ad448429c615d500aa5b16180a3 SHA256 d065f43f8d0915bc5c05a52a1805dc4b36f97b9f7d379ba5f4214670916e1455
+DIST fldigi-3.0.tar.gz 689028 RMD160 7889e4da9970ebb1543ea31d414e1a55d4d22104 SHA1 fc5627d8f34b3e392e63d6f1c9701a8341feb408 SHA256 6102babe96020c3f4237ba0a53afb2b005c8ce6e2a7be631035bd576974cfb53
+DIST fldigi-help.pdf 2623126 RMD160 8a99f27e0c29c35ee94e0de0800da5096326a0f1 SHA1 867de1b02cbbe0521fd5a068a0a75e4be1a0b336 SHA256 07922bfe5e20a325f2b2b4cfdf88026aef9e1d925ad6191d4b767fadaef5ce38
+EBUILD fldigi-3.0.ebuild 1116 RMD160 06b8f59a7fe1c86ee32d30ba197d50af481f0719 SHA1 ea5e455a0ad8f5388005cf43d278e8a6896e2d07 SHA256 959a8b1eb74f9cfcb932f16bc955bbd5b6b28bbe5589abf5172234e83eda4b13
+MISC ChangeLog 557 RMD160 862b3a927252241117d20d2cec1fe23ea8a003e4 SHA1 6552ecaf8b15fb2f304bba1290cc5aaa1a71864c SHA256 04c029c765136fcbe1e0aae3355665931e521f8e805f0130625056792d844e7c
+MISC metadata.xml 683 RMD160 812524354b5c3a2dee693d368f682bcdbde9534d SHA1 220973975995db8e1a3811220f14391489d33b33 SHA256 410b39d72376987c6cec97f9889c8b48f9e45acf8fc3121ce6c2172f74c95331
