@@ -4,12 +4,13 @@
 
 DESCRIPTION="Sound card based multimode software modem for Amateur Radio use."
 HOMEPAGE="http://www.w1hkj.com/Fldigi.html"
-SRC_URI="http://www.w1hkj.com/fldigi-distro/${P}.tar.gz"
+SRC_URI="mirror://berlios/${PN}/${P}.tar.gz
+	mirror://berlios/${PN}/fldigi-help.pdf"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
-IUSE="hamlib portaudio pulseaudio sndfile"
+IUSE="hamlib portaudio pulseaudio sndfile xmlrpc"
 
 RDEPEND=">=x11-libs/fltk-1.1.7
 	dev-libs/libxml2
@@ -19,20 +20,23 @@ RDEPEND=">=x11-libs/fltk-1.1.7
 	hamlib? ( media-libs/hamlib )
 	portaudio? ( >=media-libs/portaudio-19_pre20071207 )
 	pulseaudio? ( media-sound/pulseaudio )
-	sndfile? ( >=media-libs/libsndfile-1.0.10 ) "
+	sndfile? ( >=media-libs/libsndfile-1.0.10 )
+	xmlrpc? ( dev-libs/xmlrpc-c )"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
 
 src_compile() {
 	econf $(use_with sndfile) \
-	    $(use_with portaudio) \
-	    $(use_with hamlib) \
-	    $(use_with pulseaudio)
+		$(use_with portaudio) \
+		$(use_with hamlib) \
+		$(use_with pulseaudio) \
+		$(use_with xmlrpc)
 	emake || die "emake failed"
 }
 
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed"
-	dodoc AUTHORS ChangeLog README || die "dodoc failed"
+	dodoc AUTHORS ChangeLog README \
+		"${DISTDIR}/fldigi-help.pdf" || die "dodoc failed"
 }
