@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
+  -fldigi-2.10.3.ebuild, +fldigi-3.0.ebuild, metadata.xml:
+  Version bump.
+
   11 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
   Added use flag description (GLEP56)
 
